--- a/style/layout.css
+++ b/style/layout.css
@@ -19,15 +19,33 @@
        max-width: 33rem;
       height: 100%;
       margin-left: auto;
-  }
-    }
+      .back{
+        display: flex;
+        align-items: center;
+        gap: 8PX;
+        margin-bottom: 24px;
+      }
+      h1{
+        margin-bottom: 8px;
+      }
+      p{  margin-bottom: 48px;
+        color: var(--text-secondary);
+          }
+    }}
     aside{
       background-color:var(--surface-secondary);
       padding: 4rem;
     .aside-contende{
      max-width: 31rem;
-      height: 100%;
-    
+      height: 100%;}
+    h1{
+      font: 600 40px var(--font-famaly);
     }
+    p{
+      margin-block: 8px 32px;
+      color: var(--text-secondary);
+    }
+    
       
     }
+  
