--- a/style/form.css
+++ b/style/form.css
@@ -34,3 +34,27 @@ section:focus{
   border: .125rem solid  var(--stroke-highlight);
   outline-offset: .1px;
 }
+input[type='date'] {
+  position: relative;
+
+  &::before{
+    position: absolute;
+    content: "";
+    background: url(../assets/icones/calendar-03.svg)  no-repeat center/contain; 
+
+    right: 1rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    top: 50%;
+    transform: translateY(-50%);
+
+  }
+}
+
+input[type='date']::-webkit-calendar-picker-indicator {
+  opacity: 0; /* Torna o indicador invisível */
+}
+select{
+  background: url(../assets/icones/arrow-down-01.svg)  no-repeat right  center/contain;
+
+}
