informação do resposavel

--- a/style/ultilyti.css
+++ b/style/ultilyti.css
@@ -2,7 +2,7 @@
   display: grid;
 }
 .grid-tenplad{
-  grid-template-columns: 70%  30%;
+  grid-template-columns: calc(70% - 20px)  30%;
 
 }
 .gap{
@@ -10,4 +10,7 @@
 }
 .marguin{
  margin-block:0 48px;
+}
+.flex{
+  display: flex;
 }
