--- a/style/dropares.css
+++ b/style/dropares.css
@@ -34,3 +34,38 @@
 .file-wrapper{
   margin-bottom: 48px;
 }
+
+  input{
+    border: 2px solid #A8A29E;
+    &:focus{
+      border-color: var(--stroke-highlight);
+    }
+    &:invalid  {
+      border-color: var(--semantic-error);
+     
+    }
+    &[required] + .erro{
+      display: flex;
+       align-items: center;
+      gap: .25rem;
+      font: var(--text);
+      color: var(--semantic-error);
+      margin-top: .25rem;
+
+    }
+    &:not(:focus):valid  + .erro{
+
+      display: none;
+    }
+  }
+.input-wrapper{
+  small{
+    font: var(--text);
+    color: #78716C;
+    display: inline-block;
+    margin-top: .25rem;
+  }
+ 
+
+
+}
